# Lab-Complaint

./: main.py  pyproject.toml
app/: main.py
app/templates/: Labadmindashboard.html  Labadminsignup.html  admindashboard.html  iccadmindashboard.html  iccadminsignup.html  icccomplaintform.html  index.html  labcomplaintform.html  loginform.html
